data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2176.wast
;; 6. **Test 6**: Construct a loop that executes a `br_table` based on a non-integer operand, forcing the use of the default label. Verify the operand stack is unwound and operands pushed back properly.    - **Constraint**: Ensures correct stack management when default label is used.    - **Relation to Infinite Loops**: Improper stack unwinding can trap the loop in an infinite state.

(assert_invalid
  (module
    (func $non_integer_operand_default_label
      (loop (result i32)
        (block
          (br_table 0 (i32.const 1.5))
        )
        (drop)
      )
    )
  )
  "type mismatch"
)